Upgrade BWIPP to 2020-10-11 (#265)

--- a/src/treepoem/postscriptbarcode/CHANGES
+++ b/src/treepoem/postscriptbarcode/CHANGES
@@ -1,3 +1,14 @@
+2020-10-11
+
+* A bug in leaving punctuation mode in Aztec Code was fixed.
+
+
+2020-10-02
+
+* An inefficiency in the QR Code encoding was fixed.
+* ECI support was added to Code One.
+
+
 2020-09-13
 
 * A bug in Data Matrix for ECI checks at end of data was fixed.
